# pendulum

./: .gitattributes  CMakeLists.txt  main.c
.github/workflows/: build-deploy.yml
include/: sim.h
src/: main.c  sim.c
